# MyMySQL

./: CMakeLists.txt  LICENSE  README.md
include/: Parser.hpp  Query.hpp  Regex.hpp  header.hpp  parser.hpp
lib/: CMakeLists.txt
parser/: CMakeLists.txt  parser.cpp
regex/: CMakeLists.txt  build.cpp  interface.cpp  parse.cpp
src/: CMakeLists.txt  Query.cpp  build.cpp  interface.cpp  mysql.sql  parse.cpp
